[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu_Theme_1.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Menu/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="buttonResume" type="Button" parent="VBoxContainer"]
margin_right = 166.0
margin_bottom = 37.0
text = "RESUME"

[node name="buttonMainMenu" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 166.0
margin_bottom = 93.0
text = "MAIN MENU"

[node name="buttonQuit" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 166.0
margin_bottom = 149.0
text = "QUIT"

[connection signal="ready" from="." to="." method="set_paused" binds= [ true ]]
[connection signal="tree_exiting" from="." to="." method="set_paused" binds= [ false ]]
[connection signal="mouse_entered" from="VBoxContainer/buttonResume" to="VBoxContainer/buttonResume" method="grab_focus"]
[connection signal="pressed" from="VBoxContainer/buttonResume" to="." method="queue_free"]
[connection signal="ready" from="VBoxContainer/buttonResume" to="VBoxContainer/buttonResume" method="grab_focus"]
[connection signal="mouse_entered" from="VBoxContainer/buttonMainMenu" to="VBoxContainer/buttonMainMenu" method="grab_focus"]
[connection signal="pressed" from="VBoxContainer/buttonMainMenu" to="." method="change_scene" binds= [ "res://Scenes/Menu/MenuSystem.tscn" ]]
[connection signal="mouse_entered" from="VBoxContainer/buttonQuit" to="VBoxContainer/buttonQuit" method="grab_focus"]
[connection signal="pressed" from="VBoxContainer/buttonQuit" to="." method="quit"]
